* Updates to product ingestions:
  - GEOMS PANDORA: added systematic/random uncertainty for effective
    temperature, renamed H2CO in harp variable names to HCHO.
  - OCO: added support for ACOS/OCO-2/OCO-3 L2/L3 products.
  - S5P L2 HCHO: added amf=clear_sky ingestion option

1.15.1 2022-05-18
~~~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - CLOUDNET L2 classification: fixed fillvalue mapping of values to NaN.
  - GEOMS PANDORA: fixes for template V003 support
  - GEOMS FTIR: allow instrument lat/lon/alt variables to be one-dimensional
    with replicated values.
  - GEOMS UVVIS.BREWER: added random+systematic uncertainty variables.
  - S5P L2 CO: fixed vertical ordering of new apriori profile.

1.15 2022-03-14
~~~~~~~~~~~~~~~

* Fixed issue where bin() operation was removing scalar enumeration variables.

* Updates to product ingestions:
  - ECMWF GRIB: fixed parameter mapping for CAMS model data that uses
    masterTablesVersion=27 data and added support for new
    masterTablesVersion=28 data
  - GEOMS UVVIS.BREWER: added support for template V001
  - GEOMS PANDORA: added support for template V003
  - S5P L2 AAI: added new 335/367 wavelength pair
  - S5P L2 CO: added new apriori profile and support for new AVK unit
  - S5P L2 O3 Profile: added surface_albedo and cloud_albedo
  - S5P L2 HCHO/O3/SO2: added support for updated NRTI indication attribute.

1.14 2021-10-20
~~~~~~~~~~~~~~~

* Updated embedded udunits2 library to version 2.2.28.

* Improved CMake build system.

* Fixed issue when building against HDF5 1.12.

* Updates to product ingestions:
  - AEOLUS L1B: fixed ingestion of Mie/measurement data; added sensor angles
  - AEOLUS L2B: fixed ingestion of Mie data; added sensor angles
  - CLOUDNET L2 classification: added support for new (netcdf4) format
  - EARTHCARE: added very early support (limited version of ECA_ACM_CAP_2B)
  - ECMWF GRIB: fixed unit of backscatter coefficient 1/(milli sr) -> 1/(m sr),